fixed a dark pixel line that sowed up on mobile devices, lazyloader

--- a/_sass/_projectLayout.scss
+++ b/_sass/_projectLayout.scss
@@ -4,16 +4,15 @@
 
   .gallery {
     .swiper-slide {
-      background-color: #232323;
       box-shadow: 0px 1px 3px rgba(0,0,0,0.5);
       .swiper-lazy-preloader {
-        width: 176px;
-        height: 50px;
+        background-color: #232323;
+        width: 100%;
+        height: 100%;
         position: absolute;
-        left: 50%;
-        top: 50%;
-        margin: -25px 0 0 -86px;
-        z-index: 10;
+        margin: 0;
+        left: 0;
+        top: 0;
         -webkit-transform-origin: 0;
         -moz-transform-origin: 0;
         transform-origin: 0;
@@ -21,6 +20,13 @@
         -moz-animation: none;
         animation: none;
         &:after {
+          width: 176px;
+          height: 50px;
+          position: relative;
+          left: 50%;
+          top: 50%;
+          margin: -25px 0 0 -86px;
+          z-index: 10;
           background-image: url('/assets/laden.gif');
         }
       }
